--- a/resolver-online-offline.mdx
+++ b/resolver-online-offline.mdx
@@ -16,7 +16,7 @@ Your online environment stores data that you want to cache
 according to the cache policies you set on [your features](/docs/feature-caching) or
 on [your queries](/docs/query-caching). While this is usually a small amount of data,
 you want exceptionally fast reads.
-This access patterns aligns
+This kind of access pattern aligns
 with the performance characteristics of [Redis](https://redis.com) or [BigTable](https://cloud.google.com/bigtable),
 which Chalk uses to store your online data.
 
