--- a/debugging-queries.mdx
+++ b/debugging-queries.mdx
@@ -185,7 +185,7 @@ that have common root causes:
 
 ### Request error
 
-Request errors are raised before execution of your resolver code.
+Request errors are raised before your resolver code executes.
 They may occur due to invalid feature names in the
 input or a request that cannot be satisfied by the resolvers you
 have defined.
