remove pointless prologue

--- a/query-online.mdx
+++ b/query-online.mdx
@@ -7,8 +7,7 @@ import { TipInfo } from '@/components/Tip'
 
 ---
 
-Chalk provides two ways of querying your data: online and offline. Online
-queries access or compute feature values for a single feature
+Online queries access or compute feature values for a single feature
 set in real time. The term "real time" is a little vague , but what it
 gets at is a need to compute the response to a non-trivial request with
 as little delay as possible—responses should seem practically instantaneous.
