fix header indentations

--- a/query-online.mdx
+++ b/query-online.mdx
@@ -102,7 +102,7 @@ After getting a query plan, Chalk distributes subtasks to workers, applies
 a number optimizations on your resolvers/datasource connections, and
 computes the target outputs of your query. These outputs are then returned.
 
-### Caching and Writing
+## Caching and Writing
 
 Online queries write computed values to two places: the offline store
 and the online store. However, computed features are only written to
