--- a/query-online.mdx
+++ b/query-online.mdx
@@ -29,31 +29,26 @@ that will produce a target output. Although a simplification, your resolvers
 are a subset of these tasks. Consider the following feature set and resolvers:
 
 ```python
-from chalk.feature import features
+from chalk.features import features
 
 @features
 class User:
   id: int
   name: str
-  backwards_name: str
   is_palindrome: str
   is_short: bool
   palindrome_and_short: bool
 
 @online
-def get_backwards_name(name: User.name) -> User.backwards_name:
-  return name[::-1]
+def get_is_palindrome(name: User.name, User.backwards_name) -> User.is_palindrome:
+  return name == name[::-1]
 
 @online
-def get_name_is_palindrome(name: User.name, User.backwards_name) -> User.is_palindrome:
-  return name == backwards_name
-
-@online
-def get_name_is_short(name: User.name) -> User.is_short:
+def get_is_short(name: User.name) -> User.is_short:
   return name.len() < 3
 
 @online
-def get_name_is_short_palindrome(is_short: User.is_short, is_palindrome: User.is_palindrome) -> User.is_short_palindrome:
+def get_is_short_palindrome(is_short: User.is_short, is_palindrome: User.is_palindrome) -> User.is_short_palindrome:
   return is_short and is_palindrome
 ```
 
