Clean up a few names

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -850,7 +850,7 @@ Prior to this update, descriptions needed to be set in the `feature(...)` functi
 
 ```py
 @features
-class UserFeatures:
+class User:
     fraud_score: float = feature(description="""
            **0 to 100 score indicating an identity match.**
            **Low scores indicate safer users**
