--- a/feature-caching.mdx
+++ b/feature-caching.mdx
@@ -16,7 +16,7 @@ from chalk.features import feature, features
 from datetime import timedelta
 
 @features
-class UserFeatures:
+class User:
     # Using text descriptors:
     expensive_fraud_score: float = feature(
         max_staleness="**1m 30s**"
