--- a/features.mdx
+++ b/features.mdx
@@ -25,7 +25,7 @@ from typing import Optional
 from chalk.features import features
 
 @features
-class UserFeatures:
+class User:
     id: int
     full_name: str
     nickname: Optional[str]
@@ -147,12 +147,12 @@ the provided date.
 
 ## Constructing feature classes
 
-To construct a `UserFeatures` instance, supply the feature values
+To construct a `User` instance, supply the feature values
 to the `__init__()` method
 
 ```py
-UserFeatures(full_name="Grace Hopper", nickname="Amazing Grace")
-UserFeatures(email="grace.hopper@yale.edu")
+User(full_name="Grace Hopper", nickname="Amazing Grace")
+User(email="grace.hopper@yale.edu")
 ```
 
 The `@features` decorator adds a custom `__init__()`:
