remove migrate references, fix link

--- a/temporal-consistency.mdx
+++ b/temporal-consistency.mdx
@@ -126,7 +126,7 @@ was always computing the gross profit of the business you track, so that
 you can train our models on the historical
 value of `Business.gross_profit`.
 
-To do that, you can run a [migration](/cli/migrate)
+To do that, you can run a [backfill](/docs/backfilling-data)
 against all of your data, or against only the samples
 you want to observe.
 For example, if you had observed the `Business.sales`
