--- a/training-client.mdx
+++ b/training-client.mdx
@@ -13,7 +13,7 @@ Offline queries pull data from the offline store or calculate features through
 
 <TipInfo>
   Offline queries can also execute online resolvers if no offline resolver is available for a
-  features
+  requested feature.
 </TipInfo>
 
 In an offline query you can request multiple instances of a feature set—additionally,
