fix a last couple bugs

--- a/resolver-online-offline.mdx
+++ b/resolver-online-offline.mdx
@@ -96,5 +96,5 @@ More details are provided in the section [Reverse ETL](/docs/reverse-etl).
 | Runs only <code className="whitespace-nowrap before:content-none text-pink-400 after:content-none"> @online </code> resolvers | Runs both <code className="whitespace-nowrap before:content-none text-pink-400 after:content-none"> @online </code> and <code className="whitespace-nowrap before:content-none text-pink-400 after:content-none"> @offline </code> resolvers |
 | Returns one row of data about one entity                                                                                      | Returns a DataFrame of many rows of historical data corresponding to multiple entities point-in-time                                                                                                                                         |
 | Designed to return data immediately in milliseconds                                                                           | Blocks until computation is complete, not designed for millisecond-level computation                                                                                                                                                         |
-| Queries the online store and calls @online resolvers for quick retrieval                                                      | Queries the offline store which stores all data from offline queries, unless recompute_features is True in which case @offline and @online resolvers are used to resolve the outputs
+| Queries the online store and calls `@online` resolvers for quick retrieval                                                    | Queries the offline store which stores all data from offline queries, unless `recompute_features=True` in which case `@offline` and `@online` resolvers are used to resolve the outputs
 | Writes output data to online store database and offline store database                                                        | Writes output to a parquet file containing results to cloud storage. Only writes to online store or offline store if specified.
