clean the words

--- a/training-client.mdx
+++ b/training-client.mdx
@@ -55,8 +55,8 @@ client.offline_query(
 
 In the Python client, offline queries return Chalk `Dataset`s, which we cover, in detail, in the
 next [section](/docs/datasets). However, at a high level, Chalk `Dataset`s are flexible wrappers
-around the results of your offline query that can be converted to pandas or polars and used for
-downstream ML tasks.
+around the results of your offline query that can be converted to pandas or polars—this makes them
+easy to use for downstream ML tasks.
 
 ### Input
 
