--- a/query-overview.mdx
+++ b/query-overview.mdx
@@ -54,7 +54,7 @@ which constrain the outputs to a specific temporal range.
 ## Query Side Effects
 
 Chalk queries can also write data. This is an essential part of
-Chalk: every time you compute a feature through an online query, the
+Chalk: every time you compute a feature through an online query the
 output is written down in the offline store. This makes it easy to:
 
 - create datasets from your previously computed features,
